--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Just test
+This blog is way to keep track of stuff that I am thinking about or working on.
+I research things that I find interesting, then document my findings with a public blog post, which I can refer to later.
+Hopefully other people will find these posts helpful, relevant, or interesting. 
+
+
