--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+About me
+
+I am just me :) euh, okay I am a FOSS contributor
+
+About this blog
+
 This blog is way to keep track of stuff that I am thinking about or working on.
 I research things that I find interesting, then document my findings with a public blog post, which I can refer to later.
 Hopefully other people will find these posts helpful, relevant, or interesting. 
