--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-About me
+**About me**
 
-I am just me :) euh, okay I am a FOSS contributor
+I am just me :) euh, okay I am a *FOSS* contributor
 
-About this blog
+**About this blog**
 
 This blog is way to keep track of stuff that I am thinking about or working on.
 I research things that I find interesting, then document my findings with a public blog post, which I can refer to later.
