--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@ I am a GNU/Linux SysAdmin at Linagora. When I have a free time or when I'm not t
 
 <b>About this blog</b>
 <br/><br/>
-This blog is way to keep track of stuff that I am thinking about or working on. <br/>
+This little site is way to keep track of stuff that I am thinking about or working on. <br/>
 I research things that I find interesting, then document my findings with a public blog post, which I can refer to later. <br/>
-Hopefully other people will find these posts helpful, relevant, or interesting. <br/>
+Hopefully other people will find these posts helpful, relevant, or interesting. <br/><br/>
+
+<b> Contact</b>
+<br/><br/>
+if you have anything to say, or you want me to help you in an Open-source project. do not hesitate to mail me <br/>
+<i>naeilzoueidi at ubuntu dot com</i>. BTW, please try your best to not send me a HTML mail :s or base64-mime attachments. <br/>
+Another thing, I am not on facebook, while I am on twitter attNaeilZoueidi. <br/>
+
+
 
 
