--- a/index.html
+++ b/index.html
@@ -12,9 +12,20 @@ Hopefully other people will find these posts helpful, relevant, or interesting. 
 
 <b> Contact</b>
 <br/><br/>
-if you have anything to say, or you want me to help you in an Open-source project. do not hesitate to mail me <br/>
+if you have anything to say, or you want me to help you in an Open-source project. Do not hesitate to mail me on <br/>
 <i>naeilzoueidi at ubuntu dot com</i>. BTW, please try your best to not send me a HTML mail :s or base64-mime attachments. <br/>
-Another thing, I am not on facebook, while I am on twitter attNaeilZoueidi. <br/>
+Another thing, I am not on facebook, while I am on twitter attNaeilZoueidi. <br/><br/>
+
+<b> Posts </b>
+<br/><br/>
+I will try my best to update this section when I add any new post/article. 
+<ul>
+  <li> hh</li>
+  <li> </li>
+  <li> </li>
+  <li> </li>
+</ul>
+
 
 
 
