--- a/index.html
+++ b/index.html
@@ -29,4 +29,8 @@ I will try my best to update this section when I add any new post/article.
 
 
 
+<br/><br/><br/><br/><br/>
+<a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="CC" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under the terms of the <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+
+
 
