--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <b> About me</b> <br/><br/>
 
 I am just a *FOSS* contributor who is interested currently on the development of the kernel. of course Linux.<br/>
-I am a GNU/Linux SysAdmin at Linagora. When I have a free time or when I'm not trying to pay the bills, I'm a contributor to the Ubuntu community.<br/>
+I am a GNU/Linux SysAdmin at Linagora. When I have a free time or when I'm not trying to pay the bills, I'm a contributor to the <a href="https://wiki.ubuntu.com/nzoueidi">Ubuntu community</a>.<br/>
+and this is my <a href="resume.html">resume</a> include almost everything that I did from the day that I have born until now. 
 <br/><br/>
 
-<b>About this blog</b>
+<b>About this site</b>
 <br/><br/>
-This little site is way to keep track of stuff that I am thinking about or working on. <br/>
+This little piece of site is a way to keep track of stuff that I am thinking about or working on. <br/>
 I research things that I find interesting, then document my findings with a public blog post, which I can refer to later. <br/>
 Hopefully other people will find these posts helpful, relevant, or interesting. <br/><br/>
 
@@ -14,7 +15,7 @@ Hopefully other people will find these posts helpful, relevant, or interesting. 
 <br/><br/>
 if you have anything to say, or you want me to help you in an Open-source project. Do not hesitate to mail me on <br/>
 <i>naeilzoueidi at ubuntu dot com</i>. BTW, please try your best to not send me a HTML mail :s or base64-mime attachments. <br/>
-Another thing, I am not on facebook, while I am on twitter attNaeilZoueidi. <br/><br/>
+Another thing, I am not on facebook, while I am on <a href="https://twitter.com/NaeilZoueidi">twitter</a> <br/><br/>
 
 <b> Posts </b>
 <br/><br/>
