--- a/resume.html
+++ b/resume.html
@@ -1,8 +1,8 @@
 <center> <b>Naeil ZOUEIDI</b> <br/> Current job : GNU/Linux SysAdmin at Linagora  </center> <br/><br/><br/>
 <i><b>Experience</b></i> <br/><br/>
-<li>
-<ul> From 1st May 2016 until now : GNU/Linux SysAdmin at Linagora </ul>
-<ul></ul>
-<ul></ul>
-</li>
+<ol>
+<li> From 1st May 2016 until now : GNU/Linux SysAdmin at Linagora </li>
+<li></li>
+<li></li>
+</ol>
 
