--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 <i><b>Experience</b></i> <br/><br/>
 <ol>
 <li> From 1st May 2016 until now : GNU/Linux SysAdmin at Linagora </li>
-  <ul> Mission : </ul>
+  <ul> <li> Mission : </li></ul>
 <li></li>
 <li></li>
 </ol>
