--- a/resume.html
+++ b/resume.html
@@ -1,9 +1,24 @@
-<center> <b>Naeil ZOUEIDI</b> <br/> Current job : GNU/Linux SysAdmin at Linagora  </center> <br/><br/><br/>
+<center> <b>Naeil ZOUEIDI</b> <br/> Current job : OSSA Engineer at Linagora  </center> <br/><br/><br/>
 <i><b>Experience</b></i> <br/><br/>
 <ol>
-<li> From 1st May 2016 until now : GNU/Linux SysAdmin at Linagora </li>
-  <ul> <li> Mission : </li></ul>
-<li></li>
+<li> From 1st May 2016 until 1 st December 2016 : GNU/Linux SysAdmin at Linagora </li>
+  <ul> <li> Mission : - Installing and maintaining FULL-OBM on (Debian, Centos) <br/>
+- Automatically deploy ready-to-use development environment (Ansible/Puppet)<br/>
+- Monitor the remote virtualized platform (nagios, munin, cacti)<br/>
+- Maintain production environments and support/assist hosting clients requests<br/>
+- Troubleshoot Xen Cloud Platform, KVM and QEMU hypervisors<br/>
+- Join and connect remote offices via OpenVpn and pfsense<br/>
+- Ensure security and qos policies are applied (packet filter)<br/></li>
+    
+  </ul>
+<li>From 1 st December until now : OSSA Engineer at Linagora</li>
+  <ul> <li> Mission : - Supporting more than <a href="https://www.linagora.com/ossa">400 Open-source softwares </a><br/>
+    - Comiling and building costum kernels <br/>
+    - Developing patches for old and new kernels <br/>
+    - Answering technical questions of clients and consulting for selecting, incorporating, and utilizing the right software for the specific needs of clients.
+   <br/> 
+    </li>  
+  </ul>
 <li></li>
 </ol>
 
