--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <b> About me</b> <br/><br/>
 
 I am just a *FOSS* contributor who is interested currently on the development of the kernel. of course Linux.<br/>
-I am a GNU/Linux SysAdmin at Linagora. When I have a free time or when I'm not trying to pay the bills, I'm a contributor to the <a href="https://wiki.ubuntu.com/nzoueidi">Ubuntu community</a>.<br/>
-and this is my <a href="resume.html">resume</a> include almost everything that I did from the day that I have born until now. 
+I am an OSSA engineer at Linagora. When I have a free time or when I'm not trying to pay the bills, I'm a contributor to the <a href="https://wiki.ubuntu.com/nzoueidi">Ubuntu community</a>.<br/>
+and this is my <a href="resume.html">resume</a>. It doesn't include everything that I did, but at least it include the most important things that I have done. 
 <br/><br/>
 
 <b>About this site</b>
