--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ Another thing, I am not on facebook, while I am on <a href="https://twitter.com/
 <br/><br/>
 I will try my best to update this section when I add any new post/article. 
 <ul>
+  <li> <a href="posts/post1.html">Using GnuPG with Mutt </a></li>
   <li> </li>
   <li> </li>
   <li> </li>
