--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<title>Naeil ZOUEIDI</title>
 <b> About me</b> <br/><br/>
 
 I am just a *FOSS* contributor who is interested currently on the development of the kernel. of course Linux.<br/>
