--- a/resume.html
+++ b/resume.html
@@ -1,3 +1,4 @@
+<title>My resume</title>
 <center> <b>Naeil ZOUEIDI</b> <br/> Current job : OSSA Engineer at Linagora  </center> <br/><br/><br/>
 <i><b>Experience</b></i> <br/><br/>
 <ol>
