--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Hopefully other people will find these posts helpful, relevant, or interesting. 
 <b> Contact</b>
 <br/><br/>
 if you have anything to say, or you want me to help you in an Open-source project. Do not hesitate to mail me on <br/>
-<i>naeilzoueidi at ubuntu dot com</i>. BTW, please try your best to not send me a HTML mail :s or base64-mime attachments. <br/>
+<i>naeil at nzoueidi dot com</i>. BTW, please try your best to not send me a HTML mail :s or base64-mime attachments. <br/>
 Another thing, I am not on facebook, while I am on <a href="https://twitter.com/NaeilZoueidi">twitter</a> <br/><br/>
 
 <b> Posts </b>
