modifying to non-git

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ I will try my best to update this section when I add any new post/article.
 <ul>
   <li> <a href="posts/post1.html">Using GnuPG with Mutt </a></li>
   <li> <a href="posts/post2.html">Why Tmux is cool!</a></li>
-  <li> <a href="posts/post3.html">The most useful git commands!</a> </li>
+  <li> <a href="posts/post3.html">The most useful git/non-git commands!</a> </li>
   <li> </li>
   <li> </li>
 </ul>
