--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ I will try my best to update this section when I add any new post/article.
   <li> <a href="posts/post1.html">Using GnuPG with Mutt </a></li>
   <li> <a href="posts/post2.html">Why Tmux is cool!</a></li>
   <li> <a href="posts/post3.html">The most useful git/non-git commands!</a> </li>
-  <li> </li>
+  <li> <a href="posts/post4.html">Into the wild!</a></li>
   <li> </li>
 </ul>
 
