Adding SFD award workshop

--- a/resume.html
+++ b/resume.html
@@ -27,6 +27,7 @@
     - Master at <a href="http://linuxpadawan.net/">LinuxPadawan</a> : from September 2015 until now <br/>
     - GNU/Linux SysAdmin at <a href="http://savannah.gnu.org/">Savannah GNU Lug</a> : from April 2016 until May 2016<br/>
     - Part of the Ubuntu <a href="https://wiki.ubuntu.com/Membership/">Board Membership</a> <br/>
+    - Award of the best workshop during the <a href="http://sfd.tn/2016/">SFD2016</a> <br/>	
     </ul>
 </ol>
 
