Adding what I do to my resume

--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,28 @@
 <title>My resume</title>
 <center> <b>Naeil ZOUEIDI</b> <br/> Current job : OSSA Engineer at Linagora  </center> <br/><br/><br/>
+
+<b>I am an expert software developer and C programmer with over 8 years of UNIX/Linux experience. </b><br/><br/>
+<ul>
+	<li> I am a prolific contributor to the Linux community:</li>
+	<ul> <a href="https://wiki.ubuntu.com/nzoueidi">Ubuntu</a></ul>
+	<ul> <a href="https://launchpad.net/~naeilzoueidi">Launchpad</a></ul>
+	<ul> Linux kernel and Ubuntu kernel</ul>
+	<li> I have a deep understanding of the C programming language, software quality principles, and debugging techniques.</li>
+	<li>I am a friendly person and an excellent mentor; I give speechs/workshops during many FLOSS events </li>
+	<li>I have a rich knowledge of the UNIX/Linux operating system at the kernel and user levels, including extensive experience with: </li>
+	<ul>many operating system variants (Ubuntu, Red Hat, Solaris, *BSD, Arch Linux, Gentoo, Debian, etc.) </ul>
+	<ul> multi-threaded programming techniques and performance optimization</ul>
+	<ul> system and application performance analysis (virtual memory, I/O performance issues) </ul>
+	<ul> virtual machine systems (kvm, qemu) </ul>
+	<ul> software development tools (gcc, gdb, gprof, make, etc.) </ul>
+	<ul> scripting languages and standard utilities (sh/ksh/csh, python, awk, perl, sed, regexp, etc.) </ul>
+	<ul> change management systems (git, bzr, cvs, svn,  etc.)</ul>
+	<ul> packging systems (Debian packaging, ubuntu-dev-tools, autoconf tools, dpatch, quilt, etc.) </ul>
+	<ul> high and low-level network protocols (TCP/IP, UDP, DHCP, NFS, DNS, HTTP, SMTP, etc.) </ul>
+	<ul> common library API's (C, socket, threads, GLib/GTK+)</ul>
+	<li> I am very familiar with 64-bit and 32-bit CPU architectures (Intel, AMD, Sparc, ARM, PIC, Motorola) including multi-core issues, and Intel x86/SSE assembly language. </li>
+
+</ul>
 <i><b>Experience</b></i> <br/><br/>
 <ol>
 <li> From 1st May 2016 until 1 st December 2016 : GNU/Linux SysAdmin at Linagora </li><br/>
