--- a/resume.html
+++ b/resume.html
@@ -4,9 +4,9 @@
 <b>I am an expert software developer and C programmer with over 8 years of UNIX/Linux experience. </b><br/><br/>
 <ul>
 	<li> I am a prolific contributor to the Linux community:</li>
-	<ul> <a href="https://wiki.ubuntu.com/nzoueidi">Ubuntu</a></ul>
-	<ul> <a href="https://launchpad.net/~naeilzoueidi">Launchpad</a></ul>
-	<ul> Linux kernel and Ubuntu kernel</ul>
+	<ul><li> <a href="https://wiki.ubuntu.com/nzoueidi">Ubuntu</a></li>
+	<li> <a href="https://launchpad.net/~naeilzoueidi">Launchpad</a></li>
+	<li> Linux kernel and Ubuntu kernel</li></ul>
 	<li> I have a deep understanding of the C programming language, software quality principles, and debugging techniques.</li>
 	<li>I am a friendly person and an excellent mentor; I give speechs/workshops during many FLOSS events </li>
 	<li>I have a rich knowledge of the UNIX/Linux operating system at the kernel and user levels, including extensive experience with: </li>
