--- a/resume.html
+++ b/resume.html
@@ -10,16 +10,16 @@
 	<li> I have a deep understanding of the C programming language, software quality principles, and debugging techniques.</li>
 	<li>I am a friendly person and an excellent mentor; I give speechs/workshops during many FLOSS events </li>
 	<li>I have a rich knowledge of the UNIX/Linux operating system at the kernel and user levels, including extensive experience with: </li>
-	<ul>many operating system variants (Ubuntu, Red Hat, Solaris, *BSD, Arch Linux, Gentoo, Debian, etc.) </ul>
-	<ul> multi-threaded programming techniques and performance optimization</ul>
-	<ul> system and application performance analysis (virtual memory, I/O performance issues) </ul>
-	<ul> virtual machine systems (kvm, qemu) </ul>
-	<ul> software development tools (gcc, gdb, gprof, make, etc.) </ul>
-	<ul> scripting languages and standard utilities (sh/ksh/csh, python, awk, perl, sed, regexp, etc.) </ul>
-	<ul> change management systems (git, bzr, cvs, svn,  etc.)</ul>
-	<ul> packging systems (Debian packaging, ubuntu-dev-tools, autoconf tools, dpatch, quilt, etc.) </ul>
-	<ul> high and low-level network protocols (TCP/IP, UDP, DHCP, NFS, DNS, HTTP, SMTP, etc.) </ul>
-	<ul> common library API's (C, socket, threads, GLib/GTK+)</ul>
+	<ul>many operating system variants (Ubuntu, Red Hat, Solaris, *BSD, Arch Linux, Gentoo, Debian, etc.) </li>
+	<li> multi-threaded programming techniques and performance optimization</li>
+	<li> system and application performance analysis (virtual memory, I/O performance issues) </li>
+	<li> virtual machine systems (kvm, qemu) </li>
+	<li> software development tools (gcc, gdb, gprof, make, etc.) </li>
+	<li> scripting languages and standard utilities (sh/ksh/csh, python, awk, perl, sed, regexp, etc.) </li>
+	<li> change management systems (git, bzr, cvs, svn,  etc.)</li>
+	<li> packging systems (Debian packaging, ubuntu-dev-tools, autoconf tools, dpatch, quilt, etc.) </li>
+	<li> high and low-level network protocols (TCP/IP, UDP, DHCP, NFS, DNS, HTTP, SMTP, etc.) </li>
+	<li> common library API's (C, socket, threads, GLib/GTK+)</li></ul>
 	<li> I am very familiar with 64-bit and 32-bit CPU architectures (Intel, AMD, Sparc, ARM, PIC, Motorola) including multi-core issues, and Intel x86/SSE assembly language. </li>
 
 </ul>
