--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
 	<li> I have a deep understanding of the C programming language, software quality principles, and debugging techniques.</li>
 	<li>I am a friendly person and an excellent mentor; I give speechs/workshops during many FLOSS events </li>
 	<li>I have a rich knowledge of the UNIX/Linux operating system at the kernel and user levels, including extensive experience with: </li>
-	<ul>many operating system variants (Ubuntu, Red Hat, Solaris, *BSD, Arch Linux, Gentoo, Debian, etc.) </li>
+	<ul><li>many operating system variants (Ubuntu, Red Hat, Solaris, *BSD, Arch Linux, Gentoo, Debian, etc.) </li>
 	<li> multi-threaded programming techniques and performance optimization</li>
 	<li> system and application performance analysis (virtual memory, I/O performance issues) </li>
 	<li> virtual machine systems (kvm, qemu) </li>
