Creating the 9th post and adding it to the index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ I will try my best to update this section when I add any new post/article.
   <li> <a href="posts/post2.html">Why Tmux is cool!</a></li>
   <li> <a href="posts/post3.html">The most useful git/non-git commands!</a> </li>
   <li> <a href="posts/post4.html">Into the wild!</a></li>
-  <!--  <li> <a href="posts/post5.html">Some of the tricks of the Linux kernel </a> </li> -->
+  <li> <a href="posts/post9.html">Learn LXD and LXC the hard way! </a> </li>
   <li> </li>
 </ul>
 
