Modifiying the index.html and some typos of the 10th post

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ I will try my best to update this section when I add any new post/article.
   <li> <a href="posts/post3.html">The most useful git/non-git commands!</a> </li>
   <li> <a href="posts/post4.html">Into the wild!</a></li>
   <li> <a href="posts/post9.html">Learn LXD and LXC the hard way! </a> </li>
+  <ul> <li> <a href="posts/post10.html"> Getting started with LXC and LXD </li></ul>
   <li> </li>
 </ul>
 
