--- a/resume.html
+++ b/resume.html
@@ -43,7 +43,7 @@
     </li>  
   </ul>
      <br/><br/>
-<li>From 1st March 2018 until now : DevOps Enginner at Vistaprint</li><br/>
+<li>From 1st March 2018 until now : DevOps Engineer at Vistaprint</li><br/>
   <ul><li> Mission : <br/>- Manage CI/CD cycle for developers<br/>
     - Manage and control of clusters in production (Kubernetes, HA, etc.)<br/>
     - Develop new tools that are needed to solve problems using several languages (Golang, Python, etc.) <br/>
