Change my current job

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <b> About me</b> <br/><br/>
 
 I am just a *FOSS* contributor who is interested currently on the development of the kernel. of course Linux.<br/>
-I am an OSSA engineer at Linagora. When I have a free time or when I'm not trying to pay the bills, I'm a contributor to the <a href="https://wiki.ubuntu.com/nzoueidi">Ubuntu community</a>.<br/>
+I am a DevOps engineer at Vistaprint. When I have a free time or when I'm not trying to pay the bills, I'm a contributor to the <a href="https://wiki.ubuntu.com/nzoueidi">Ubuntu community</a>.<br/>
 and this is my <a href="resume.html">resume</a>. It doesn't include everything that I did, but at least it include the most important things that I have done. 
 <br/><br/>
 
