Add meetup section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,18 @@ Hopefully other people will find these posts helpful, relevant, or interesting. 
 if you have anything to say, or you want me to help you in an Open-source project. Do not hesitate to mail me on <br/>
 <i>naeil at nzoueidi dot com</i>. BTW, please try your best to not send me a HTML mail :s or base64-mime attachments. <br/>
 Another thing, I am not on facebook, while I am on <a href="https://twitter.com/NaeilZoueidi">twitter</a> <br/><br/>
-
+<b> Meetups </b>
+<br/><br/>
+This section is for meetups I have organized or I have attented. Each meetup will include photos and slides for persentations if there is any.
+<ul>
+  <li> Kubernetes meetups</li>
+  <ul> <li> </li> </ul> 
+  <li> Linux meetups</li>
+  <ul> <li> </li> </ul>
+  <li> Other meetups</li>
+  <ul> <li> </li> </ul>
+</ul>
+<br/><br/>
 <b> Posts </b>
 <br/><br/>
 I will try my best to update this section when I add any new post/article. 
