--- a/resume.html
+++ b/resume.html
@@ -35,7 +35,7 @@
     <br/><br/>
   </ul>
 <li>From 1st December 2016 until 28th February 2018 : OSSA Engineer at Linagora (Open-Source Software Assurance)</li><br/>
-  <ul> <li> Mission : <br/>- Supporting more than <a href="https://www.linagora.com/ossa">400 Open-source softwares </a><br/>
+  <ul> <li> Mission : <br/>- Supporting more than <a href="https://linagora.com/open-source-support">400 Open-source softwares </a><br/>
     - Comiling and building costum kernels <br/>
     - Developing patches for old and new kernels <br/>
     - Answering technical questions of clients and consulting for selecting, incorporating, and utilizing the right software for the specific needs of clients.
