Add Docker 101 workshop

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@ This section is for meetups I have organized or I have attented. Each meetup wil
   <li> Linux meetups</li>
   <ul> <li> </li> </ul>
   <li> Other meetups</li>
-  <ul> <li> </li> </ul>
+  <ul> 
+       <li> <a href="meetups/docker101-esprit.html"> Docker 101 - Esprit </a></li> 
+       <li> </li>
+  </ul>
 </ul>
 <br/><br/>
 <b> Posts </b>
