Fix typos in docker-esprit

--- a/meetups/docker101-esprit.html
+++ b/meetups/docker101-esprit.html
@@ -1,5 +1,5 @@
 <title> Docker 101 at Esprit </title>
-<center><b> Docker 101 at Esprit</b></center> <br/><br/>
+<center><b> Docker 101 at Esprit</b></center> <br/>
 <hr/>
 <br/>
 This a Docker workshop organized by ESPRIT Club Cloud'Tic where I talked about some of the basics of Docker and containerization in general.<br/> 
@@ -10,9 +10,10 @@ I have discussed some of the points below:<br/><br/>
 	<li> Dockerfiles </li>
 	<li> Brief explanation of the Moby project </li>
 	<li> Docker daemon, Docker CLI, Rest API, Docker engine and what the hell is the role of the Linux kernel </li>
+</ul>
 <br/><br/>
+
 Unfortunately, I don't use slides, all I need is a simple window terminal.<br/>
 I just have some <a href="https://drive.google.com/drive/folders/1Q0IIjzUrFGJsKFsUWNPn3UHdihfL80Ir?usp=sharing"> photos </a> during the workshop.<br/>
 
 
-</ul>
