--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <title>My resume</title>
-<center> <b>Naeil ZOUEIDI</b> <br/> Current job : DevOps Engineer at Vistaprint  </center> <br/><br/><br/>
+<center> <b>Naeil EZZOUEIDI</b> <br/> Current job : DevOps Engineer at Vistaprint  </center> <br/><br/><br/>
 
 <ul>
 	<li> I am a prolific contributor to the Linux community:</li>
