--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<title>Naeil ZOUEIDI</title>
+<title>Naeil EZZOUEIDI</title>
 <b> About me</b> <br/><br/>
 
 I am just a *FOSS* contributor who is interested currently on the development of the kernel. of course Linux.<br/>
-I am a DevOps engineer at Vistaprint. When I have a free time or when I'm not trying to pay the bills, I'm a contributor to the <a href="https://wiki.ubuntu.com/nzoueidi">Ubuntu community</a>.<br/>
-and this is my <a href="resume.html">resume</a>. It doesn't include everything that I did, but at least it include the most important things that I have done. 
+I am a DevOps engineer at Vistaprint. When I have a free time or when I'm not trying to pay the bills, I'm a contributor to the <a href="https://wiki.ubuntu.com/nzoueidi" target="_blank">Ubuntu community</a>.<br/>
+and this is my <a href="resume.html" target="_blank">resume</a>. It doesn't include everything that I did, but at least it include the most important things that I have done. 
 <br/><br/>
 
 <b>About this site</b>
@@ -16,18 +16,18 @@ Hopefully other people will find these posts helpful, relevant, or interesting. 
 <br/><br/>
 if you have anything to say, or you want me to help you in an Open-source project. Do not hesitate to mail me on <br/>
 <i>naeil at nzoueidi dot com</i>. BTW, please try your best to not send me a HTML mail :s or base64-mime attachments. <br/>
-Another thing, I am not on facebook, while I am on <a href="https://twitter.com/NaeilZoueidi">twitter</a> <br/><br/>
+Another thing, I am not on facebook, while I am on <a href="https://twitter.com/NaeilEzzoueidi" target="_blank">twitter</a> <br/><br/>
 <b> Meetups </b>
 <br/><br/>
 This section is for meetups I have organized or I have attented. Each meetup will include photos and slides for persentations if there is any.
 <ul>
   <li> Kubernetes meetups</li>
-  <ul> <li> </li> </ul> 
+  <ul> <li> <a href="https://www.meetup.com/Kubernetes-Cloud-Native-Tunisia/" target="_blank">Kubernetes and Cloud Native Tunisia</li> </ul> 
   <li> Linux meetups</li>
   <ul> <li> </li> </ul>
   <li> Other meetups</li>
   <ul> 
-       <li> <a href="meetups/docker101-esprit.html"> Docker 101 - Esprit </a></li> 
+       <li> <a href="meetups/docker101-esprit.html" target="_blank"> Docker 101 - Esprit </a></li> 
        <li> </li>
   </ul>
 </ul>
@@ -36,13 +36,16 @@ This section is for meetups I have organized or I have attented. Each meetup wil
 <br/><br/>
 I will try my best to update this section when I add any new post/article. 
 <ul>
-  <li> <a href="posts/post1.html">Using GnuPG with Mutt </a></li>
-  <li> <a href="posts/post2.html">Why Tmux is cool!</a></li>
-  <li> <a href="posts/post3.html">The most useful git/non-git commands!</a> </li>
-  <li> <a href="posts/post4.html">Into the wild!</a></li>
-  <li> <a href="posts/post9.html">Learn LXD and LXC the hard way! </a> </li>
-  <ul> <li> <a href="posts/post10.html"> Getting started with LXC and LXD </li></ul>
-  <li> <a href="posts/post11.html">A tour into k8s's code </a></li>
+  <li> <a href="posts/post1.html" target="_blank">Using GnuPG with Mutt </a></li>
+  <li> <a href="posts/post2.html" target="_blank">Why Tmux is cool!</a></li>
+  <li> <a href="posts/post3.html" target="_blank">The most useful git/non-git commands!</a> </li>
+  <li> <a href="posts/post4.html" target="_blank">Into the wild!</a></li>
+  <ul><li> <a href="posts/post5.html" target="_blank">Behind the scenes!</a></li>
+      <li><a href="posts/post7.html" target="_blank">Examine the Stack using GDB</a></li>
+      <li><a href="posts/post14.html" target="_blank">How debuggers like GDB works?</a></li></ul>
+  <li> <a href="posts/post9.html" target="_blank">Learn LXD and LXC the hard way! </a> </li>
+  <ul> <li> <a href="posts/post10.html" target="_blank"> Getting started with LXC and LXD </li></ul>
+  <li> <a href="posts/post11.html" target="_blank">A tour into k8s's code </a></li>
 </ul>
 
 
