--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@ Another thing, I am not on facebook, while I am on <a href="https://twitter.com/
 This section is for meetups I have organized or I have attented. Each meetup will include photos and slides for persentations if there is any.
 <ul>
   <li> Kubernetes meetups</li>
-  <ul> <li> <a href="https://www.meetup.com/Kubernetes-Cloud-Native-Tunisia/" target="_blank">Kubernetes and Cloud Native Tunisia</li> </ul> 
+  <ul> <li> <a href="https://www.meetup.com/Kubernetes-Cloud-Native-Tunisia/" target="_blank">Kubernetes and Cloud Native Tunisia</a></li> </ul> 
   <li> Linux meetups</li>
   <ul> <li> </li> </ul>
   <li> Other meetups</li>
   <ul> 
        <li> <a href="meetups/docker101-esprit.html" target="_blank"> Docker 101 - Esprit </a></li> 
-       <li> </li>
   </ul>
 </ul>
 <br/><br/>
