--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@ I will try my best to update this section when I add any new post/article.
   <li> <a href="posts/post9.html" target="_blank">Learn LXD and LXC the hard way! </a> </li>
   <ul> <li> <a href="posts/post10.html" target="_blank"> Getting started with LXC and LXD </li></ul>
   <li> <a href="posts/post11.html" target="_blank">A tour into k8s's code </a></li>
+  <ul><li> <a href="posts/post12.html" target="_blank">The magic behind a simple kubectl command! -- Part1</a></li>
+      <li> <a href="posts/post13.html" target="_blank">Ingress k8s - Let's play around it -- Part I</a></li></ul>
 </ul>
 
 
