--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ This section is for meetups I have organized or I have attented. Each meetup wil
   </ul>
 </ul>
 <br/><br/>
+<b>This is the <a href="image.html" target="_blank">image</a> of today! </b>
 <b> Posts </b>
 <br/><br/>
 I will try my best to update this section when I add any new post/article. 
