--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ This section is for meetups I have organized or I have attented. Each meetup wil
   </ul>
 </ul>
 <br/><br/>
-This is the <a href="image.html" target="_blank">image</a> of today! <br/><br/> <br/>
+Today's image is <a href="image.html" target="_blank">here</a>. <br/><br/> <br/>
 
 <b> Posts </b>
 <br/><br/>
