Fix typos in the CV

--- a/resume.html
+++ b/resume.html
@@ -48,13 +48,13 @@
     - Manage and control of clusters in production (Kubernetes, HA, etc.)<br/>
     - Develop new tools that are needed to solve problems using several languages (Golang, Python, etc.) <br/>
     - Answering technical questions and solve issues/problems that happen to developers.<br/>
-    - On-Call rotation for urgent critical issues.
+    - On-Call rotation for urgent critical issues.</li>
   <br/><br/>
 <li>From 1st May 2019 until now : Senior DevOps Engineer at Vistaprint</li><br/>
   <ul><li> Mission : <br/>- Manage Kubernetes Clusters (On premise, AWS).<br/>
     - Ensure disaster recovery plans for our clusters using Velero (formely Ark).<br/>
     - Building and maintaining infrastrcute as code for our AWS stack (Terraform). <br/>
-    - Automate everything on-prem with Ansible. <br/>
+    - Automate everything on-prem with Ansible. </li><br/>
  <br/></ul>
 <br/>  
 <li>Awards and achievements from Open-Source projects</li><br/>
