--- a/resume.html
+++ b/resume.html
@@ -48,7 +48,7 @@
     - Manage and control of clusters in production (Kubernetes, HA, etc.)<br/>
     - Develop new tools that are needed to solve problems using several languages (Golang, Python, etc.) <br/>
     - Answering technical questions and solve issues/problems that happen to developers.<br/>
-    - On-Call rotation for urgent critical issues.</li>
+    - On-Call rotation for urgent critical issues.</li></ul>
   <br/><br/>
 <li>From 1st May 2019 until now : Senior DevOps Engineer at Vistaprint</li><br/>
   <ul><li> Mission : <br/>- Manage Kubernetes Clusters (On premise, AWS).<br/>
