Update my CV and update the image for rabbit-cat

--- a/resume.html
+++ b/resume.html
@@ -65,6 +65,8 @@
     - Part of the Ubuntu <a href="https://wiki.ubuntu.com/Membership/">Board Membership</a> <br/>
     - Award of the best workshop during the <a href="http://sfd.tn/2016/">SFD2016</a> <br/>
     - CNCF <a href="https://www.cncf.io/speaker/nzoueidi">Speaker</a><br/>
+    - Kubernetes Member and active contributor
+    - Kubernetes Membership Coordinator
     </ul>
 </ol>
 
