--- a/image.html
+++ b/image.html
@@ -1,4 +1,4 @@
 <title>Image of the day</title>
 <hr/>
 <br/><br/>
-<center><img src="images/interesting.jpg"/></center>
+<center><img src="images/rabbit-cat.jpg"/></center>
