--- a/resume.html
+++ b/resume.html
@@ -65,7 +65,7 @@
     - Part of the Ubuntu <a href="https://wiki.ubuntu.com/Membership/">Board Membership</a> <br/>
     - Award of the best workshop during the <a href="http://sfd.tn/2016/">SFD2016</a> <br/>
     - CNCF <a href="https://www.cncf.io/speaker/nzoueidi">Speaker</a><br/>
-    - Kubernetes Member and active contributor
+    - Kubernetes Member and active contributor<br/>
     - Kubernetes Membership Coordinator
     </ul>
 </ol>
