Modify in my resume #3

--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <title>My resume</title>
-<center> <b>Naeil EZZOUEIDI</b> <br/> Current job : Senior DevOps Engineer at Vistaprint  </center> <br/><br/><br/>
+<center> <b>Naeil EZZOUEIDI</b> <br/> Current job : SRE/DevOps Engineer at Carrefour  </center> <br/><br/><br/>
 
 <ul>
 	<li> I am a prolific contributor to the Linux community:</li>
@@ -57,7 +57,7 @@
     - Automate everything on-prem with Ansible. </li><br/>
  <br/></ul>
 <br/>  
-<li> From 1st November until now: SRE/DevOps Engineer </li><br/>
+<li> From 1st November until now: SRE/DevOps Engineer at Carrefour </li><br/>
 <ul><li> Mission: <br/>- Migrating legacy applications to Cloud Native ones. <br/>
     - Craete helm charts and auomate their deployments.<br/>
     - Monitoring and observability for Cloud Native applications (Prometheus, Grafana, Thanos).<br/>
