Update my resume

--- a/resume.html
+++ b/resume.html
@@ -56,9 +56,11 @@
     - Building and maintaining infrastrcute as code for our AWS stack (Terraform). <br/>
     - Automate everything on-prem with Ansible. </li><br/>
  <br/></ul>
+<br/> 
+<li> From 1st October 2019 until now: SRE/DevOps Engineer Consultant at Heptasys</li><br/>
 <br/>  
 <li> From 1st November until now: SRE/DevOps Engineer at Carrefour </li><br/>
-<ul><li> Mission: <br/>- Migrating legacy applications to Cloud Native ones. <br/>
+<ul><li> Consultancy mission: <br/>- Migrating legacy applications to Cloud Native ones. <br/>
     - Craete helm charts and auomate their deployments.<br/>
     - Monitoring and observability for Cloud Native applications (Prometheus, Grafana, Thanos).<br/>
     - Building and maintaining infrastrcute as code for GCP and Azure.<br/>
