Update my resume

--- a/resume.html
+++ b/resume.html
@@ -28,6 +28,7 @@
   <ul> <li> Mission : <br/>- Installing and maintaining FULL-OBM on (Debian, Centos) <br/>
 - Automatically deploy ready-to-use development environment (Ansible/Puppet)<br/>
 - Monitor the remote virtualized platform (nagios, munin, cacti)<br/>
+B
 - Maintain production environments and support/assist hosting clients requests<br/>
 - Troubleshoot Xen Cloud Platform, KVM and QEMU hypervisors<br/>
 - Join and connect remote offices via OpenVpn and pfsense<br/>
@@ -69,7 +70,10 @@
 </ul>
 <br/>
 <li> From 27 October 2020 until now: DevOps & Cloud Engineer II at Amazon Web Service </li><br/>
-<ul><li> Mission: <br/>
+<ul><li> Mission: <br/> - Working on AWS Container and Observability Services (EKS, ECS, Fargate, AMP and AMG). <br/>
+        - EKS Support OPS for escalated and critical cases. <br/>
+        - AWS Premium Support for Entreprise customers. <br/>
+        - Contributing to AWS open source projects. <br/>
 </ul>
 <br/><br/>
 <li>Awards and achievements from Open-Source projects</li><br/>
@@ -82,7 +86,8 @@
     - CNCF <a href="https://www.cncf.io/speaker/nzoueidi">Speaker</a><br/>
     - CNCF Ambassador. <br/>
     - Kubernetes Member and active contributor<br/>
-    - Kubernetes Membership Coordinator Until 01/10/2020
+    - Kubernetes Membership Coordinator Until 01/10/2020<br/>
+    - Program Committee member in co-located event at KubeCon EU 2021 - Cloud Native Security Day 
     </ul>
 </ol>
 
